folow recomendations of sonar